test/should-fail/rb-annotation-2.warn
函数[foo]需要返回[integer]，但你返回了[handle]。